stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_per_export_invalidation_plan.snap
---
source: tests/fixtures.rs
assertion_line: 5799
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_per_export_invalidation_plan.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
3
2
1
1
stderr:
<empty>
