stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_projection_fallbacks.snap
---
source: tests/fixtures.rs
assertion_line: 1777
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_projection_fallbacks.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
empty match;tuple projection is out of bounds;tuple projection on non-tuple value;record literal has no such field;ok
stderr:
<empty>
