stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_receive_metadata_refinement.snap
---
source: tests/fixtures.rs
assertion_line: 2164
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_receive_metadata_refinement.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
receive:value:Unknown
lambda:value:i64
actor:value:i64
stderr:
<empty>
