stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_record_field_projection_substitution.snap
---
source: tests/fixtures.rs
assertion_line: 2164
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_record_field_projection_substitution.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
i64;unknown
stderr:
<empty>
