stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_record_type_resolution.snap
---
source: tests/fixtures.rs
assertion_line: 1597
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_record_type_resolution.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
unknown record Boxes.missing;Boxes.box missing field label
stderr:
<empty>
